--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     	<meta charset="UTF-8"/>
     	<title>Andrew Kolokolnikov</title>
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">  
-		<!--
-		<link rel="shortcut icon" href="i/favicon1.ico" type="image/x-icon"/>
-		-->
+		<link rel="shortcut icon" href="i/favicon.ico" type="image/x-icon"/>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 		<!--
 		<link rel="stylesheet" media="all" href="styles/main_global.css"/>
@@ -21,7 +19,7 @@
 			<div class="row">
 				<div class="col-12">
 					<p class="test">
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras pharetra nisi quis sagittis pretium. Curabitur a lacus posuere, maximus est ut, pulvinar ex. Vestibulum sollicitudin quam et euismod sagittis. Ut iaculis sollicitudin nibh ut cursus. Mauris commodo leo nec auctor mollis. Ut ac elit et sem sagittis convallis. In gravida augue vitae ullamcorper vehicula. Integer sollicitudin, quam ac consectetur mattis, nibh lorem elementum metus, ac tincidunt tellus lorem id ante. Sed velit arcu, viverra tincidunt lacus vel, dignissim rutrum sem. Ut quis quam in lacus scelerisque congue in eu urna. Nunc blandit posuere mi ut facilisis. Nunc nec massa fermentum, pulvinar orci sed, porta mauris. Phasellus porttitor id nisl eu ultricies. Etiam sed turpis in sem lobortis molestie vel eget ligula. Sed eleifend vel leo nec tristique. Sed euismod metus a placerat lacinia.
+						Welcome!
 					</p>
 				</div>
 			</div>
