--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
     <header class="header">
       <div class="header_main_row">
         <div class="header_main_row_in">
-          <h1 class="logo_wrap header_mod"><a href="/" class="logo_text header_mod">
+          <h1 class="logo_wrap header_mod">
+            <a href="/" class="logo_text header_mod">
+              <img alt="" src="i/icons/yousician-white.png" class="logo_png header_logo">
+              <!--
               <svg class="icon icon-logo header_mod">
                 <use xlink:href="i/sprite/sprite.svg#logo"></use>
-              </svg></a>
+              </svg>
+              -->
+            </a>
           </h1>
           <div class="menu_trigger menuTrigger"><span class="menu_trigger_decor"></span></div>
           <nav class="header_menu">
@@ -311,10 +316,15 @@
       <footer class="footer">
         <div class="footer_in">
           <div class="footer_col">
-            <div class="logo_wrap footer_mod"><a href="/" class="logo_text footer_mod">
+            <div class="logo_wrap footer_mod">
+              <a href="/" class="logo_text footer_mod">
+                <img alt="" src="i/icons/yousician-white.png" class="logo_png">
+                <!--
                 <svg class="icon icon-logo footer_mod">
                   <use xlink:href="i/sprite/sprite.svg#logo"></use>
-                </svg></a>
+                </svg>
+                -->
+              </a>
             </div>
           </div>
           <div class="footer_col half_mod">
