--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="base">
         <div class="present home_mod">
           <div class="present_content">
-            <h2 class="present_title">making musicality</br> as common as literacy</h2>
+            <h2 class="present_title">find other musicians to play with</br>easy, welcoming and free</h2>
             <div class="present_btn_wrap"><a href="careers.html" class="present_btn">join us</a></div>
           </div>
         </div>
