--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/"/>
     <meta charset="UTF-8"/>
-    <title>Yousician – Your personal music teacher</title>
+    <title>Yousician Meetups – an easy, welcoming and free way to find other musicians</title>
     <meta name="viewport" content="width=device-width"/>
     <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
@@ -51,7 +51,7 @@
       <div class="base">
         <div class="present home_mod">
           <div class="present_content">
-            <h2 class="present_title">find other musicians to play with</br>easy, welcoming and free</h2>
+            <h2 class="present_title">find other musicians to play with</br>easy and free</h2>
             <div class="present_btn_wrap"><a href="careers.html" class="present_btn">join us</a></div>
           </div>
         </div>
