--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <div class="present home_mod">
           <div class="present_content">
             <h2 class="present_title">find other musicians</br>to play with</h2>
-            <div class="present_btn_wrap"><a href="careers.html" class="present_btn">join us</a></div>
+            <div class="present_btn_wrap"><a href="careers.html" class="present_btn">join</a></div>
+            <div class="present_btn_wrap"><a href="careers.html" class="present_btn">host</a></div>
           </div>
         </div>
         <div class="section">
