--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="present_content">
             <h2 class="present_title">find other musicians</br>to play with</h2>
             <div class="present_btn_wrap"><a href="careers.html" class="present_btn">join a meetup</a></div>
-            <div class="present_btn_wrap"><a href="careers.html" class="present_btn">arrange a meetup</a></div>
+            <div class="present_btn_wrap"><a href="careers.html" class="present_btn">host a meetup</a></div>
           </div>
         </div>
         <div class="section">
