--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="present home_mod">
           <div class="present_content">
             <h2 class="present_title">find other musicians</br>to play with</h2>
-            <div class="present_btn_wrap"><a href="careers.html" class="present_btn">join a meetup</a></div>
+            <div class="present_btn_wrap present_btn_wrap_join"><a href="careers.html" class="present_btn">join a meetup</a></div>
             <div class="present_btn_wrap"><a href="careers.html" class="present_btn">host a meetup</a></div>
           </div>
         </div>
