--- a/index.html
+++ b/index.html
@@ -38,10 +38,8 @@
           <nav class="header_menu">
             <ul class="header_menu_list">
               <li class="header_menu_item"><a id="index_nav" href="index.html" class="header_menu_link">Home</a></li>
-              <li class="header_menu_item"><a id="careers_nav" href="careers.html" class="header_menu_link">Careers</a></li>
-              <li class="header_menu_item"><a id="story_nav" href="story.html" class="header_menu_link">Our story</a></li>
-              <li class="header_menu_item"><a id="contact_nav" href="contact.html" class="header_menu_link">Contact us</a></li>
-              <li class="header_menu_item"><a id="blog_nav" href="blog.html" class="header_menu_link">Blog</a></li>
+              <li class="header_menu_item"><a id="careers_nav" href="#join_meetup" class="header_menu_link">Join Meetup</a></li>
+              <li class="header_menu_item"><a id="story_nav" href="#host_meetup" class="header_menu_link">Host Meetup</a></li>
             </ul>
           </nav>
         </div>
@@ -52,8 +50,8 @@
         <div class="present home_mod">
           <div class="present_content">
             <h2 class="present_title">find other musicians</br>to play with</h2>
-            <div class="present_btn_wrap present_btn_wrap_join"><a href="careers.html" class="present_btn">join a meetup</a></div>
-            <div class="present_btn_wrap"><a href="careers.html" class="present_btn">host a meetup</a></div>
+            <div class="present_btn_wrap present_btn_wrap_join"><a href="careers.html" class="present_btn">join meetup</a></div>
+            <div class="present_btn_wrap"><a href="careers.html" class="present_btn">host meetup</a></div>
           </div>
         </div>
         <div class="section">
@@ -168,7 +166,7 @@
             </ul>
             <div class="platform_pager"></div>
           </div>
-          <div class="cite_block">
+          <div id="join_meetup" class="cite_block">
             <div class="cite_content">
               <div class="cite_img_wrap"><img src="i/home/4-image.jpg" alt="" class="cite_img"></div>
             </div>
@@ -229,7 +227,7 @@
             </ul>
           </div>
           <div class="about_block">
-            <h2 class="section_header offset_mod">Yousician as a company</h2>
+            <h2 id="host_meetup" class="section_header offset_mod">Yousician as a company</h2>
             <div class="about_desc">
               <div class="about_content_wrap">
                 <div class="about_content">
@@ -334,7 +332,6 @@
               <li class="footer_item"><a href="http://app.yousician.com/account/profile#/login" target="_blank" class="footer_link">Login</a></li>
               <li class="footer_item"><a href="https://app.yousician.com/account/profile#/freetrial" target="_blank" class="footer_link">Try Premium</a></li>
               <li class="footer_item"><a href="https://app.yousician.com/account/profile#/download" target="_blank" class="footer_link">Download Yousician</a></li>
-              <li class="footer_item"><a href="https://get.yousician.com/edu/" target="_blank" class="footer_link">Yousician for teachers</a></li>
             </ul>
           </div>
           <div class="footer_col half_mod">
@@ -358,15 +355,15 @@
           </div>
           <div class="footer_col">
             <ul class="social_list footer_mod">
-              <li class="social_item footer_mod"><a href="#" class="social_link facebook_mod footer_mod">
+              <li class="social_item footer_mod"><a href="https://www.facebook.com/YousicianMeetups/" class="social_link facebook_mod footer_mod">
                   <svg class="icon icon-facebook footer_mod">
                     <use xlink:href="i/sprite/sprite.svg#facebook"></use>
                   </svg></a></li>
-              <li class="social_item footer_mod"><a href="#" class="social_link instagram_mod footer_mod">
+              <li class="social_item footer_mod"><a href="https://www.instagram.com/yousicianmeetups/" class="social_link instagram_mod footer_mod">
                   <svg class="icon icon-instagram footer_mod">
                     <use xlink:href="i/sprite/sprite.svg#instagram"></use>
                   </svg></a></li>
-              <li class="social_item footer_mod"><a href="#" class="social_link twitter_mod footer_mod">
+              <li class="social_item footer_mod"><a href="https://twitter.com/yousicianmeetup/" class="social_link twitter_mod footer_mod">
                   <svg class="icon icon-twitter footer_mod">
                     <use xlink:href="i/sprite/sprite.svg#twitter"></use>
                   </svg></a></li>
