--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="present home_mod">
           <div class="present_content">
             <h2 class="present_title">find other musicians</br>to play with</h2>
-            <div class="present_btn_wrap present_btn_wrap_join"><a href="careers.html" class="present_btn">join meetup</a></div>
-            <div class="present_btn_wrap"><a href="careers.html" class="present_btn">host meetup</a></div>
+            <div class="present_btn_wrap present_btn_wrap_join"><a href="#join_meetup" class="present_btn">join meetup</a></div>
+            <div class="present_btn_wrap"><a href="#host_meetup" class="present_btn">host meetup</a></div>
           </div>
         </div>
         <div class="section">
