--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               -->
             </a>
           </h1>
-          <div class="menu_trigger menuTrigger"><span class="menu_trigger_decor"></span></div>
+          <div class="menu_trigger menuTriggerMain"><span class="menu_trigger_decor"></span></div>
           <nav class="header_menu">
             <ul class="header_menu_list">
               <li class="header_menu_item menuTrigger"><a id="index_nav" href="#index_page" class="header_menu_link">Home</a></li>
