--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <div class="menu_trigger menuTriggerMain"><span class="menu_trigger_decor"></span></div>
           <nav class="header_menu">
             <ul class="header_menu_list">
-              <li class="header_menu_item menuTrigger"><a id="index_nav" href="#index_page" class="header_menu_link">Home</a></li>
-              <li class="header_menu_item menuTrigger"><a id="careers_nav" href="#join_meetup" class="header_menu_link">Join Meetup</a></li>
-              <li class="header_menu_item menuTrigger"><a id="story_nav" href="#host_meetup" class="header_menu_link">Host Meetup</a></li>
+              <li class="header_menu_item menuTrigger"><a href="#index_page" class="header_menu_link">Home</a></li>
+              <li class="header_menu_item menuTrigger"><a href="#join_meetup" class="header_menu_link">Join Meetup</a></li>
+              <li class="header_menu_item menuTrigger"><a href="#host_meetup" class="header_menu_link">Host Meetup</a></li>
             </ul>
           </nav>
         </div>
