--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           <div class="menu_trigger menuTriggerMain"><span class="menu_trigger_decor"></span></div>
           <nav class="header_menu">
             <ul class="header_menu_list">
-              <li class="header_menu_item menuTrigger"><a href="#index_page" class="header_menu_link">Home</a></li>
-              <li class="header_menu_item menuTrigger"><a href="#join_meetup" class="header_menu_link">Join Meetup</a></li>
-              <li class="header_menu_item menuTrigger"><a href="#host_meetup" class="header_menu_link">Host Meetup</a></li>
+              <li class="header_menu_item menuTriggerIndex landing_nav"><a href="#index_page" class="header_menu_link">Home</a></li>
+              <li class="header_menu_item menuTriggerJoin"><a href="#join_meetup" class="header_menu_link">Join Meetup</a></li>
+              <li class="header_menu_item menuTriggerHost"><a href="#host_meetup" class="header_menu_link">Host Meetup</a></li>
             </ul>
           </nav>
         </div>
@@ -50,8 +50,8 @@
         <div class="present home_mod">
           <div class="present_content">
             <h2 class="present_title">find other musicians</br>to play with</h2>
-            <div class="present_btn_wrap present_btn_wrap_join"><a href="#join_meetup" class="present_btn">join meetup</a></div>
-            <div class="present_btn_wrap"><a href="#host_meetup" class="present_btn">host meetup</a></div>
+            <div class="present_btn_wrap present_btn_wrap_join"><a href="#join_meetup" class="present_btn nav_button_join">join meetup</a></div>
+            <div class="present_btn_wrap"><a href="#host_meetup" class="present_btn nav_button_host">host meetup</a></div>
           </div>
         </div>
         <div class="section">
