--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <h3 class="footer_heading">Yousician</h3>
             <ul class="footer_list">
               <li class="footer_item"><a href="http://app.yousician.com/account/profile#/login" target="_blank" class="footer_link">Login</a></li>
-              <li class="footer_item"><a href="https://app.yousician.com/account/profile#/freetrial" target="_blank" class="footer_link">Try Premium</a></li>
+              <li class="footer_item"><a href="https://app.yousician.com/account/profile#/freetrial" target="_blank" class="footer_link">Try Premium for Free</a></li>
               <li class="footer_item"><a href="https://app.yousician.com/account/profile#/download" target="_blank" class="footer_link">Download Yousician</a></li>
             </ul>
           </div>
@@ -339,17 +339,17 @@
             <ul class="footer_list">
               <li class="footer_item"><a href="https://yousician.zendesk.com/hc/en-us" target="_blank" class="footer_link">Support</a></li>
               <li class="footer_item"><a href="https://app.yousician.com/phpbb3/index.php" target="_blank" class="footer_link">Forum</a></li>
-              <li class="footer_item"><a href="http://company.yousician.com/about/tos" target="_blank" class="footer_link">Terms</a></li>
-              <li class="footer_item"><a href="http://company.yousician.com/about/privacy-policy" target="_blank" class="footer_link">Privacy policy</a></li>
+              <li class="footer_item"><a href="https://company.yousician.com/about/tos" target="_blank" class="footer_link">Terms</a></li>
+              <li class="footer_item"><a href="https://company.yousician.com/about/privacy-policy" target="_blank" class="footer_link">Privacy policy</a></li>
             </ul>
             <!--+link_list(['Support', 'Forums', 'Terms', 'Privacy policy'], 'footer')-->
           </div>
           <div class="footer_col half_mod">
             <h3 class="footer_heading">Company</h3>
             <ul class="footer_list">
-              <li class="footer_item"><a href="index.html" target="_blank" class="footer_link">About</a></li>
-              <li class="footer_item"><a href="careers.html" target="_blank" class="footer_link">Careers</a></li>
-              <li class="footer_item"><a href="story.html" target="_blank" class="footer_link">Press</a></li>
+              <li class="footer_item"><a href="https://company.yousician.com/story/" target="_blank" class="footer_link">About</a></li>
+              <li class="footer_item"><a href="https://company.yousician.com/careers/" target="_blank" class="footer_link">Careers</a></li>
+              <li class="footer_item"><a href="https://www.dropbox.com/sh/zk7pwfvd5w4jwwb/AABanb01Ozq8uCkYfSacMhpua/" target="_blank" class="footer_link">Press</a></li>
             </ul>
             <!--+link_list(['About', 'Careers', 'Press'], 'footer')-->
           </div>
