--- a/index.html
+++ b/index.html
@@ -27,11 +27,6 @@
           <h1 class="logo_wrap header_mod">
             <a href="/" class="logo_text header_mod">
               <img alt="" src="i/icons/yousician-white.png" class="logo_png header_logo">
-              <!--
-              <svg class="icon icon-logo header_mod">
-                <use xlink:href="i/sprite/sprite.svg#logo"></use>
-              </svg>
-              -->
             </a>
           </h1>
           <div class="menu_trigger menuTriggerMain"><span class="menu_trigger_decor"></span></div>
@@ -57,7 +52,7 @@
         <div class="section">
           <div class="top_impression_block">
             <div class="top_impression">
-              <p>To achieve our mission, we reimagine music education, so everyone can unleash their inner musician. We believe that music makes the world a more beautiful, colorful, and creative place, so all of us should be able to play, learn, and have fun. </p>
+              <p>Yousician Meetups is an easy, welcoming and free way to find other musicians, experience the social side and joy of playing music together.</p>
             </div>
           </div>
           <div class="top_values_block v1_mod">
@@ -89,129 +84,34 @@
               </li>
             </ul>
           </div>
-          <div class="culture_block">
-            <div class="culture_content">
-              <div class="logo_wrap green_mod"><a href="/" class="logo_text green_mod">
-                  <svg class="icon icon-logo green_mod">
-                    <use xlink:href="i/sprite/sprite.svg#logo"></use>
-                  </svg></a>
+          
+          <div class="about_block">
+            <h2 id="join_meetup" class="section_header offset_mod">Yousician as a company</h2>
+            <div class="about_desc">
+              <div class="about_content_wrap">
+                <div class="about_content">
+                  <h2 class="about_title">135 billion notes played and counting</h2>
+                  <div class="about_text">
+                    <p>Founded in 2010, Yousician is the largest and fastest growing music education company in the world. Millions of people around the globe use our products.</p>
+                    <p>Year after year, we have grown our revenue 5x while the team doubled every year. And although we are successful in monetary terms, we measure our success by the progress of our users. So far our learners have played 135 billion notes, completed 250 million exercises, and spent in total a whopping 600 years learning, playing and becoming more musical.</p>
+                  </div>
+                </div>
               </div>
-              <div class="culture_text">
-                <p>Music is one of the most diverse cultural phenomena in the world. Musicians come from all walks of life and everyone has an individual musical identity. The “You” in Yousician reflects this, as does the fingerprint in our logo. We help you discover and develop your own musical identity, so you can make the world a more musical place.</p>
-              </div>
+              <div class="about_img_wrap ab_dn_mod"><img src="i/home/6-image.jpg" class="about_img"></div>
             </div>
-            <div class="culture_img_w"><img src="i/home/2-image.jpg" alt="" class="culture_img"></div>
-          </div>
-          <div class="platform_block">
-            <div class="slider_controls"><a href="#" class="platform_control_prev v1_mod"></a><a href="#" class="platform_control_next v1_mod"></a></div>
-            <ul class="platform_list platformSlider">
-              <li class="platform_item border_mod">
-                <div class="platform_content">
-                  <div class="platform_c_wrap">
-                    <div class="platform_title">our products</div>
-                    <div class="logo_wrap darkgray_mod"><a href="/" class="logo_text darkgray_mod">
-                        <svg class="icon icon-logo darkgray_mod">
-                          <use xlink:href="i/sprite/sprite.svg#logo"></use>
-                        </svg></a>
-                      <!--.platform_item_title unleash your inner musician-->
-                    </div>
-                    <div class="platform_text">
-                      <p>Yousician is a revolutionary music platform for anyone to learn, play, create and teach music. Millions of people around the world use Yousician to advance their music skills and play the music they love.</p>
-                      <ul class="platform_store_list">
-                        <li class="platform_app_item"><a href="https://itunes.apple.com/us/app/yousician-your-personal-music/id959883039?mt=8" class="platform_link">
-                            <!--span.platform_link--><img src="i/app_store.svg" alt="" class="platform_app"></a></li>
-                        <li class="platform_app_item"><a href="https://play.google.com/store/apps/details?id=com.yousician.yousician&amp;hl=en" class="platform_link">
-                            <!--span.platform_link--><img src="i/gplay.png" alt="" class="platform_app"></a></li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="platform_btn_wrap"><a href="http://yousician.com/" class="platform_btn">start now</a></div>
-                </div>
-              </li>
-              <li class="platform_item border_mod">
-                <div class="platform_content">
-                  <div class="platform_c_wrap">
-                    <div class="platform_title">our products</div>
-                    <div class="logo_wrap darkgray_mod"><a href="/" class="logo_text darkgray_mod">
-                        <svg class="icon icon-logo darkgray_mod">
-                          <use xlink:href="i/sprite/sprite.svg#logo"></use>
-                        </svg></a>
-                      <div class="platform_item_title margin_adjustment">for educators</div>
-                    </div>
-                    <div class="platform_text">
-                      <p>Yousician for Educators is a great way for music teachers to keep students motivated, practicing at home and having fun. Teachers are able to assign and monitor homework tasks and student progression easily from the Educator Dashboard.</p>
-                    </div>
-                  </div>
-                  <div class="platform_btn_wrap"><a href="https://get.yousician.com/edu/" class="platform_btn">start now</a>
+            <div class="about_desc ab_posr_mod">
+              <div class="about_img_wrap ab_i_mod"><img src="i/home/7-image.jpg" class="about_img"></div>
+              <div class="about_content_wrap ab_c_mod">
+                <div class="about_content ab_cpd_mod">
+                  <h2 class="about_title">The people behind the apps</h2>
+                  <div class="about_text">
+                    <p>We are more than 50 people of 17 different nationalities based in Helsinki, Finland. We are a diverse bunch of hardcore audio engineers, music educators, software developers, game designers, marketers and visual artists. But what unites us all is our love for music and the shared belief that each of us can contribute to something big: helping to reimagine the future of music education.</p>
                   </div>
                 </div>
-              </li>
-              <li class="platform_item">
-                <div class="platform_content platform_bg_mod">
-                  <div class="platform_c_wrap">
-                    <div class="platform_title white_mod">our products</div>
-                    <div class="logo_wrap guitar_mod"><img src="i/icons/guitartun.svg" alt="" class="platform_logo"></div>
-                    <div class="platform_text">
-                      <p>GuitarTuna is ranked as the #1 tuner app in the world on the App Store and Google Play. Because of its accuracy, intuitive design, and emphasis on usability, GuitarTuna is the firm favorite among beginners and advanced players alike.</p>
-                    </div>
-                    <ul class="platform_store_list v1_mod">
-                      <li class="platform_app_item app_item_mod"><a href="https://itunes.apple.com/fi/app/guitar-tuna-ultimate-free/id527588389?mt=8" class="platform_link">
-                          <!--span.platform_link--><img src="i/app_store.svg" alt="" class="platform_app"></a></li>
-                      <li class="platform_app_item app_item_mod"><a href="https://play.google.com/store/apps/details?id=com.ovelin.guitartuna&amp;hl=en" class="platform_link">
-                          <!--span.platform_link--><img src="i/gplay.png" alt="" class="platform_app"></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </li>
-            </ul>
-            <div class="platform_pager"></div>
-          </div>
-          <div id="join_meetup" class="cite_block">
-            <div class="cite_content">
-              <div class="cite_img_wrap"><img src="i/home/4-image.jpg" alt="" class="cite_img"></div>
-            </div>
-            <div class="cite_content ct_bg_mod">
-              <div class="cite_text">
-                <blockquote>
-                  Every second of
-                  every day someone
-                  new from around the
-                  world starts playing
-                  an instrument with 
-                  Yousician.
-                </blockquote>
               </div>
             </div>
           </div>
-          <div class="counter_block">
-            <h2 class="counter_title">quick facts</h2>
-            <ul class="counter_list">
-              <li class="counter_item">
-                <div class="counter_content">
-                  <div class="counter_num">4</div>
-                  <div class="counter_text">instruments: guitar, <br> ukulele, bass, piano</div>
-                </div>
-              </li>
-              <li class="counter_item">
-                <div class="counter_content">
-                  <div class="counter_num">8m</div>
-                  <div class="counter_text">active users</div>
-                </div>
-              </li>
-              <li class="counter_item">
-                <div class="counter_content">
-                  <div class="counter_num">250m</div>
-                  <div class="counter_text">songs played</div>
-                </div>
-              </li>
-              <li class="counter_item">
-                <div class="counter_content">
-                  <div class="counter_num">135b</div>
-                  <div class="counter_text">notes played</div>
-                </div>
-              </li>
-            </ul>
-          </div>
+
           <div class="slider_block v1_mod">
             <div class="slider_controls"><a href="#" class="slider_control_prev"></a><a href="#" class="slider_control_next"></a></div>
             <ul class="slider_list">
@@ -226,6 +126,7 @@
               </li>
             </ul>
           </div>
+
           <div class="about_block">
             <h2 id="host_meetup" class="section_header offset_mod">Yousician as a company</h2>
             <div class="about_desc">
@@ -252,41 +153,7 @@
               </div>
             </div>
           </div>
-          <div class="channel_block">
-            <h2 class="channel_title">as seen in</h2>
-            <ul class="channel_list">
-              <li class="channel_item"><span class="channel_i mod_1"></span></li>
-              <li class="channel_item"><span class="channel_i mod_2"></span></li>
-              <li class="channel_item"><span class="channel_i mod_3"></span></li>
-              <li class="channel_item"><span class="channel_i mod_4"></span></li>
-              <li class="channel_item"><span class="channel_i mod_5"></span></li>
-              <li class="channel_item"><span class="channel_i mod_6"></span></li>
-            </ul>
-            <div class="top_values_header media_logos_text">“Yousician is modern technology's gift to music education.”</div>
-          </div>
-          <div class="channel_block ch_bg_mod">
-            <h2 class="channel_title ch_white_mod ch-pad_mod">awards and honors</h2>
-            <ul class="channel_list channel_list_add ch_pad_mod">
-              <li class="channel_item ch_pad_mod">
-                <h3 class="channel_result">featured</h3><span class="channel_i mod_7"></span>
-              </li>
-              <li class="channel_item ch_pad_mod">
-                <h3 class="channel_result">featured</h3><span class="channel_i mod_8"></span>
-              </li>
-              <li class="channel_item ch_pad_mod">
-                <h3 class="channel_result">winner</h3><span class="channel_i mod_9"></span>
-              </li>
-              <li class="channel_item ch_pad_mod">
-                <h3 class="channel_result">winner</h3><span class="channel_i mod_10"></span>
-              </li>
-              <li class="channel_item ch_pad_mod">
-                <h3 class="channel_result">winner</h3><span class="channel_i mod_11"></span>
-              </li>
-              <li class="channel_item ch_pad_mod">
-                <h3 class="channel_result">featured</h3><span class="channel_i mod_12"></span>
-              </li>
-            </ul>
-          </div>
+
           <div class="teaching_block">
             <div class="teaching_content">
               <div class="teaching_desc">
@@ -312,17 +179,13 @@
           </div>
         </div>
       </div>
+
       <footer class="footer">
         <div class="footer_in">
           <div class="footer_col">
             <div class="logo_wrap footer_mod">
               <a href="/" class="logo_text footer_mod">
                 <img alt="" src="i/icons/yousician-white.png" class="logo_png">
-                <!--
-                <svg class="icon icon-logo footer_mod">
-                  <use xlink:href="i/sprite/sprite.svg#logo"></use>
-                </svg>
-                -->
               </a>
             </div>
           </div>
