--- a/index.html
+++ b/index.html
@@ -86,26 +86,16 @@
           </div>
           
           <div class="about_block">
-            <h2 id="join_meetup" class="section_header offset_mod">Yousician as a company</h2>
-            <div class="about_desc">
-              <div class="about_content_wrap">
-                <div class="about_content">
-                  <h2 class="about_title">135 billion notes played and counting</h2>
-                  <div class="about_text">
-                    <p>Founded in 2010, Yousician is the largest and fastest growing music education company in the world. Millions of people around the globe use our products.</p>
-                    <p>Year after year, we have grown our revenue 5x while the team doubled every year. And although we are successful in monetary terms, we measure our success by the progress of our users. So far our learners have played 135 billion notes, completed 250 million exercises, and spent in total a whopping 600 years learning, playing and becoming more musical.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="about_img_wrap ab_dn_mod"><img src="i/home/6-image.jpg" class="about_img"></div>
-            </div>
+            <h2 id="join_meetup" class="section_header offset_mod">Meet musicians near you!</h2>
+
             <div class="about_desc ab_posr_mod">
               <div class="about_img_wrap ab_i_mod"><img src="i/home/7-image.jpg" class="about_img"></div>
               <div class="about_content_wrap ab_c_mod">
                 <div class="about_content ab_cpd_mod">
-                  <h2 class="about_title">The people behind the apps</h2>
+                  <h2 class="about_title">Closer Than You Think</h2>
                   <div class="about_text">
-                    <p>We are more than 50 people of 17 different nationalities based in Helsinki, Finland. We are a diverse bunch of hardcore audio engineers, music educators, software developers, game designers, marketers and visual artists. But what unites us all is our love for music and the shared belief that each of us can contribute to something big: helping to reimagine the future of music education.</p>
+                    <p>Ready to practice in real life? Find fun and effective music events in your area.</p>
+                    <p>Discover local meetups, join other clashers and share your experience! Clash Nights meetups can take many forms- arrange tournaments, get people together to watch live streams, compare decks or just hang out to play some casual 2v2. It's all in the hands of the host, and you!</p>
                   </div>
                 </div>
               </div>
@@ -128,55 +118,22 @@
           </div>
 
           <div class="about_block">
-            <h2 id="host_meetup" class="section_header offset_mod">Yousician as a company</h2>
+            <h2 id="host_meetup" class="section_header offset_mod">Bring Yousician Meetups to your area!</h2>
             <div class="about_desc">
               <div class="about_content_wrap">
                 <div class="about_content">
-                  <h2 class="about_title">135 billion notes played and counting</h2>
+                  <h2 class="about_title">We want you!</h2>
                   <div class="about_text">
-                    <p>Founded in 2010, Yousician is the largest and fastest growing music education company in the world. Millions of people around the globe use our products.</p>
-                    <p>Year after year, we have grown our revenue 5x while the team doubled every year. And although we are successful in monetary terms, we measure our success by the progress of our users. So far our learners have played 135 billion notes, completed 250 million exercises, and spent in total a whopping 600 years learning, playing and becoming more musical.</p>
+                    <p>Create engaging events where learners of all levels can experience the social elements of playing music together.</p>
+                    <p>Come join the fun and arrange your own meetups. We’d love to have you on board!</p>
                   </div>
                 </div>
               </div>
               <div class="about_img_wrap ab_dn_mod"><img src="i/home/6-image.jpg" class="about_img"></div>
             </div>
-            <div class="about_desc ab_posr_mod">
-              <div class="about_img_wrap ab_i_mod"><img src="i/home/7-image.jpg" class="about_img"></div>
-              <div class="about_content_wrap ab_c_mod">
-                <div class="about_content ab_cpd_mod">
-                  <h2 class="about_title">The people behind the apps</h2>
-                  <div class="about_text">
-                    <p>We are more than 50 people of 17 different nationalities based in Helsinki, Finland. We are a diverse bunch of hardcore audio engineers, music educators, software developers, game designers, marketers and visual artists. But what unites us all is our love for music and the shared belief that each of us can contribute to something big: helping to reimagine the future of music education.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
+
           </div>
 
-          <div class="teaching_block">
-            <div class="teaching_content">
-              <div class="teaching_desc">
-                <h2 class="section_header">for media</h2>
-                <div class="teaching_text">
-                  <p>Brand assets and product images.</p>
-                </div>
-                <div class="teaching_btn_wrap"><a href="#" class="teaching_btn">download</a></div>
-              </div>
-            </div>
-            <div class="teaching_content tc_bg_mod">
-              <div class="teaching_bg"></div>
-              <div class="teaching_desc">
-                <h2 class="section_header white_mod">Our blog<br>
-                  <!--|in teaching-->
-                </h2>
-                <div class="teaching_text white_mod">
-                  <p>Get to know us better and see what we’ve been up to. </p>
-                </div>
-                <div class="teaching_btn_wrap"><a href="blog.html" class="teaching_btn tch_btn_mod">read</a></div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
 
