--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
           <div class="about_block">
             <h2 id="join_meetup" class="section_header offset_mod">Meet musicians near you!</h2>
 
-            <div class="about_desc ab_posr_mod">
-              <div class="about_img_wrap ab_i_mod"><img src="i/home/7-image.jpg" class="about_img"></div>
-              <div class="about_content_wrap ab_c_mod">
-                <div class="about_content ab_cpd_mod">
+            <div class="about_desc">
+              <div class="about_img_wrap ab_dn_mod"><img src="i/home/7-image.jpg" class="about_img"></div>
+              <div class="about_content_wrap">
+                <div class="about_content">
                   <h2 class="about_title">Closer Than You Think</h2>
                   <div class="about_text">
                     <p>Ready to practice in real life? Find fun and effective music events in your area.</p>
