--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
         <div class="section">
           <div class="top_impression_block">
             <div class="top_impression">
-              <p>Yousician Meetups is an easy, welcoming and free way to find other musicians, experience the social side and joy of playing music together.</p>
+              <p>Yousician Meetups is an easy, welcoming and free way to find other musicians, experience the social side and joy of playing music together. Come and meet other Yousicians to play music, talk and jam. Yousician Meetups are all about meeting other musicians - aspiring learners and accomplished professionals alike and having a great time together!
+              </p>
             </div>
           </div>
                     
@@ -74,11 +75,19 @@
           </div>
 
           <div class="top_values_block v1_mod">
-            <h3 class="top_values_header">our beliefs</h3>
+            <h3 class="top_values_header">Yousician Meetups</h3>
             <ul class="top_values_list">
               <li class="top_values_item">
                 <div class="top_values_content">
-                  <h2 class="top_values_title">we are all<br> born musical</h2>
+                  <h2 class="top_values_title">Easy</h2>
+                  <div class="top_values_text">
+                    <p>Bring your instrument or come as you are.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="top_values_item">
+                <div class="top_values_content">
+                  <h2 class="top_values_title">Free</h2>
                   <div class="top_values_text">
                     <p>Anyone can learn to play an instrument and lead a more musical life.</p>
                   </div>
@@ -86,17 +95,9 @@
               </li>
               <li class="top_values_item">
                 <div class="top_values_content">
-                  <h2 class="top_values_title">Love at <br>first note</h2>
+                  <h2 class="top_values_title">Welcoming</h2>
                   <div class="top_values_text">
-                    <p>Playing music should be fun from the very first note you play. </p>
-                  </div>
-                </div>
-              </li>
-              <li class="top_values_item">
-                <div class="top_values_content">
-                  <h2 class="top_values_title">musical<br> Creativity is diverse</h2>
-                  <div class="top_values_text">
-                    <p>Great teachers enable their students to find their own musical path. </p>
+                    <p>Any level, any instrument are most welcome.</p>
                   </div>
                 </div>
               </li>
