--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="section">
           <div class="top_impression_block">
             <div class="top_impression">
-              <p>Yousician Meetups is an easy, welcoming and free way to find other musicians, experience the social side and joy of playing music together. Come and meet other Yousicians to play music, talk and jam. Yousician Meetups are all about meeting other musicians - aspiring learners and accomplished professionals alike and having a great time together!
+              <p>Meet other Yousicians to play music, talk and jam. Yousician Meetups are all about meeting other musicians - aspiring learners and accomplished professionals alike and having a great time together!
               </p>
             </div>
           </div>
@@ -67,7 +67,7 @@
                   <h2 class="about_title">Closer Than You Think</h2>
                   <div class="about_text">
                     <p>Ready to practice in real life? Find fun and effective music events in your area.</p>
-                    <p>Discover local meetups, join other clashers and share your experience! Clash Nights meetups can take many forms- arrange tournaments, get people together to watch live streams, compare decks or just hang out to play some casual 2v2. It's all in the hands of the host, and you!</p>
+                    <p>Discover local meetups, join other Yousicians and share your experience! Yousician meetups can take many forms - it's all in the hands of the host, and you!</p>
                   </div>
                 </div>
               </div>
@@ -81,7 +81,7 @@
                 <div class="top_values_content">
                   <h2 class="top_values_title">Easy</h2>
                   <div class="top_values_text">
-                    <p>Bring your instrument or come as you are.</p>
+                    <p>Bring an instrument or come as you are, ask for an advice share your expertise with fellow musicians.</p>
                   </div>
                 </div>
               </li>
