--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="top_values_content">
                   <h2 class="top_values_title">Easy</h2>
                   <div class="top_values_text">
-                    <p>Bring an instrument or come as you are, ask for an advice share your expertise with fellow musicians.</p>
+                    <p>Bring an instrument <br>or come as you are.</p>
                   </div>
                 </div>
               </li>
