--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="section">
           <div class="top_impression_block">
             <div class="top_impression">
-              <p>Meet other Yousicians to play music, talk and jam. Yousician Meetups are all about meeting other musicians - aspiring learners and accomplished professionals alike and having a great time together!
+              <p>Meet other Yousicians - aspiring learners and accomplished professionals alike, to play music, learn and have a great time together!
               </p>
             </div>
           </div>
@@ -97,7 +97,7 @@
                 <div class="top_values_content">
                   <h2 class="top_values_title">Welcoming</h2>
                   <div class="top_values_text">
-                    <p>Any level, any instrument are most welcome.</p>
+                    <p>Any level, any instrument <br>are most welcome.</p>
                   </div>
                 </div>
               </li>
