--- a/index.html
+++ b/index.html
@@ -74,6 +74,47 @@
             </div>
           </div>
 
+          <div class="top_values_block">
+            <h3 class="top_values_header">Why join Yousician</h3>
+            <ul class="top_values_list">
+              <li class="top_values_item">
+                <div class="top_values_content">
+                  <h2 class="top_values_title">
+                    meaningful<br>
+                    mission
+                  </h2>
+                  <div class="top_values_text">
+                    <p>At Yousician, you’ll help shape the future of music education and profoundly impact the lives of millions of people.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="top_values_item">
+                <div class="top_values_content">
+                  <h2 class="top_values_title">
+                    successful<br>
+                    company
+                  </h2>
+                  <div class="top_values_text">
+                    <p>We are a profitable, fast growing company. We give our people what they need to work their magic and grow professionally, such as best tools, stock options and company retreats.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="top_values_item">
+                <div class="top_values_content">
+                  <h2 class="top_values_title">
+                    great team and
+                    culture
+                  </h2>
+                  <div class="top_values_text">
+                    <p>You’ll work alongside some of the best people in your field in small, efficient and empowered teams. We work hard and jam hard!</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          
+          <!--
+
           <div class="top_values_block v1_mod">
             <h3 class="top_values_header">Yousician Meetups</h3>
             <ul class="top_values_list">
@@ -103,7 +144,7 @@
               </li>
             </ul>
           </div>
-
+-->
           <div class="slider_block v1_mod">
             <div class="slider_controls"><a href="#" class="slider_control_prev"></a><a href="#" class="slider_control_next"></a></div>
             <ul class="slider_list">
