--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </div>
           </div>
                     
-          <div class="about_block">
+          <div class="about_block section_line">
             <h2 id="join_meetup" class="section_header offset_mod">Meet musicians near you!</h2>
 
             <div class="about_desc">
