--- a/index.html
+++ b/index.html
@@ -66,8 +66,11 @@
                 <div class="about_content">
                   <h2 class="about_title">Closer Than You Think</h2>
                   <div class="about_text">
-                    <p>Ready to practice in real life? Find fun and effective music events in your area.</p>
+                    <p>Ready to practice in real life? Find fun and motivating music events in your area.</p>
                     <p>Discover local meetups, join other Yousicians and share your experience! Yousician meetups can take many forms - it's all in the hands of the host, and you!</p>
+                  </div>
+                   <div class="present_btn_wrap">
+                    <a href="/" class="present_btn">join meetup</a>
                   </div>
                 </div>
               </div>
@@ -128,6 +131,9 @@
                   <div class="about_text">
                     <p>Create engaging events where learners of all levels can experience the social elements of playing music together.</p>
                     <p>Come join the fun and arrange your own meetups. We’d love to have you on board!</p>
+                  </div>
+                  <div class="present_btn_wrap">
+                    <a href="/" class="present_btn">host meetup</a>
                   </div>
                 </div>
               </div>
